Context copy bug when cycles is chosen as render engine #30505

Closed
opened 2012-03-09 17:59:02 +01:00 by Martin Felke · 5 comments
Member

%%%Hello,

when i try to copy a button context when cycles is chosen as render engine, following error happens:

Traceback (most recent call last):

File "/home/martin/Dokumente/blender/TEST/cyclesTest.blend/Text", line 20, in execute
File "/home/martin/BlenderSVN/build/bin/2.62/scripts/modules/bpy_types.py", line 41, in copy
  value = getattr(self, attr)

AttributeError: 'Context' object has no attribute 'texture_slot'

To reproduce, run script in provided blend and click on object panel. A new subpanel "MyPanel" should appear
Choose Cycles as render engine and click on "Copy Context. Now the above error should pop up.

Tested under Ubuntu 11.10 64 bits, blender rev 44682.

Specs:
CPU: I7 2600
GPU: Geforce GTX 580
RAM: 16 GB%%%

%%%Hello, when i try to copy a button context when cycles is chosen as render engine, following error happens: Traceback (most recent call last): ``` File "/home/martin/Dokumente/blender/TEST/cyclesTest.blend/Text", line 20, in execute File "/home/martin/BlenderSVN/build/bin/2.62/scripts/modules/bpy_types.py", line 41, in copy value = getattr(self, attr) ``` AttributeError: 'Context' object has no attribute 'texture_slot' To reproduce, run script in provided blend and click on object panel. A new subpanel "MyPanel" should appear Choose Cycles as render engine and click on "Copy Context. Now the above error should pop up. Tested under Ubuntu 11.10 64 bits, blender rev 44682. Specs: CPU: I7 2600 GPU: Geforce GTX 580 RAM: 16 GB%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Brecht was working on this report. Assigning to him to prevent doing duplicated work/
Brecht, if you wouldn't manage to find reason of this issue feel free to assign to me :)%%%

%%%Brecht was working on this report. Assigning to him to prevent doing duplicated work/ Brecht, if you wouldn't manage to find reason of this issue feel free to assign to me :)%%%
Member

%%%Cycles doesn't support texture slots, is that it? Shouldn't run as error maybe.....%%%

%%%Cycles doesn't support texture slots, is that it? Shouldn't run as error maybe.....%%%

%%%Fix in svn, thanks for the report. This is a pretty strange corner case, not sure why you would copy the context or if that would even be reliable for reuse later, but doesn't give error now.%%%

%%%Fix in svn, thanks for the report. This is a pretty strange corner case, not sure why you would copy the context or if that would even be reliable for reuse later, but doesn't give error now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#30505
No description provided.