Fix #30505: bpy.context.copy() gives error running in the properties editor with cycles as render engine.